Fix gpx file upload stretching screen over screen width on mobile

--- a/client/styles/main.less
+++ b/client/styles/main.less
@@ -36,3 +36,7 @@
 @import "home";
 @import "fontello";
 @import "map";
+
+input[type=file] {
+  width: 1px;
+}
